Saving files before refreshing line endings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ web:
    - "443:443"
   volumes:
    - ./vhosts:/bitnami/apache/conf/vhosts
+   - ./dist/public:/app
   links:
    - omni1MS
    - omni2MS
