--- a/vHosts/msVirtualhost.conf
+++ b/vHosts/msVirtualhost.conf
@@ -4,8 +4,13 @@
   ProxyPass /rest/token http://securityMS:8080/token
   ProxyPassReverse /rest/token http://securityMS:8080/token
 
-  ProxyPass /rest/session http://omni1MS:8080/session
+  ProxyPass /rest/session balancer://mscluster
   ProxyPassReverse /rest/session http://omni1MS:8080/session
+
+  <Proxy balancer://mscluster>
+    BalancerMember http://omni1MS:8080/session
+    BalancerMember http://omni2MS:8080/session
+  </Proxy>
 
   <Directory "/app">
     Options Indexes FollowSymLinks
